--- a/src/common/styles/global.css
+++ b/src/common/styles/global.css
@@ -1,1 +1,42 @@
 @import url('https://unpkg.com/@superviz/sv-icons@0.8.7/css/style.css');
+
+html, body { 
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+}
+
+#sv-video-wrapper iframe {
+  position: fixed;
+  border: none;
+  margin: 0; 
+  padding: 0; 
+  overflow: hidden;
+  z-index: 5;
+}
+
+#sv-video-wrapper iframe.sv-video-frame--right { 
+  top: var(--superviz-offset-top);
+  right: var(--superviz-offset-right);
+}
+
+#sv-video-wrapper iframe.sv-video-frame--left { 
+  top: var(--superviz-offset-top);
+  left: var(--superviz-offset-left);
+}
+
+#sv-video-wrapper iframe.sv-video-frame--bottom { 
+  bottom: var(--superviz-offset-bottom);
+  right: var(--superviz-offset-right);
+  width: 100%;
+}
+
+#sv-video-wrapper iframe.sv-video-frame--top { 
+  top: var(--superviz-offset-top);
+  right: var(--superviz-offset-right);
+  width: 100%;
+}
+
+#sv-video-wrapper iframe.sv-video-frame--no-overlay { 
+  display: none;
+}
