--- a/src/common/styles/global.css
+++ b/src/common/styles/global.css
@@ -1,5 +1,5 @@
 @import url('https://unpkg.com/@superviz/sv-icons@0.8.7/css/style.css');
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;700&family=Roboto:wght@400;500;700&display=swap');
 
 html, body { 
   width: 100%;
