--- a/src/common/styles/global.css
+++ b/src/common/styles/global.css
@@ -70,5 +70,6 @@ html, body {
 .mouse-follower {
   position: absolute;
   display: block;
-  transition: all 0.4s;
+  z-index: 2;
+  transition: all 300ms ease-in-out;
 }
