--- a/src/common/styles/global.css
+++ b/src/common/styles/global.css
@@ -1,6 +1,10 @@
 @import url('https://unpkg.com/@superviz/sv-icons@0.8.10/css/style.css');
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;500;700&family=Roboto:wght@400;500;700&display=swap');
 
+:root {
+  --sv-primary: 98, 16, 204;
+}
+
 html, body { 
   width: 100%;
   height: 100%;
